--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1>Douglas P. Holt</h1>
                 <nav class="header_nav">
                     <ul class="header_nav_list">
-                        <li class="header_nav_list_item"><a href="#">About Me</a></li>
-                        <li class="header_nav_list_item"><a href="#">Projects</a></li>
+                        <li class="header_nav_list_item"><a href="#about_me_section">About Me</a></li>
+                        <li class="header_nav_list_item"><a href="#project_section">Projects</a></li>
                     </ul>
                 </nav>
         </header>
@@ -27,7 +27,7 @@
                 <section class="about_me_text">
                     <section class="section_bio">
                         <h3>Biography</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam pariatur dolor deserunt ab. Eos dolor qui sit saepe, magni animi tenetur assumenda tempore ab, maxime, beatae ex autem earum porro!</p>
+                        <p>Thank you for visit my site. I've been programming Swiss CNC machines for 12 years and instructing students on how to utilize the machines to their full potential. Now I am transitioning into full stack programming. At We-Can-Code-IT I have been working on projects in Java, JavaScript, and HTML.   </p>
                     </section>
                     <section class="section_skills">
                         <h3>Skills</h3>
@@ -47,7 +47,7 @@
         <h2 class="project_header">Projects</h2>
         <section class="project_section">
                 <article class="project_article">
-                    <h3 class="project_title">Virtual Pet<a href="#"></a></h3>
+                    <a href="https://github.com/2021-October-Java-PT/virtual-pet-DougH6">Virtual Pet</a></h3>
                         <figure class="project_figure">
                             <img src="assets\virtual-pet.jpg" alt="" class="project_image">
                             <p>Java, Javascript</p>
