commit3 base project done

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <title>Document</title>
 </head>
 <body>
+
     <div class="container">
         <header class="header">
             <h1>Douglas P. Holt</h1>
                 <nav class="header_nav">
                     <ul class="header_nav_list">
-                        <li class="header_nav_list_item"><a href="#about_me_section">About Me</a></li>
-                        <li class="header_nav_list_item"><a href="#project_section">Projects</a></li>
+                        <li class="header_nav_list_item"><a href="#about_me_id">About Me</a></li>
+                        <li class="header_nav_list_item"><a href="#project_id">Projects</a></li>
                     </ul>
                 </nav>
         </header>
-        <section class="about_me_section">
+        <section id="about_me_id" class="about_me_section">
                 <h2 class="about_me_header">About Me</h2>
                     <section class="about_me_photo">
                         <img src="assets\thumbnail.jpg" alt="profile" class="profile_image">
@@ -44,27 +45,27 @@
                     </section>
                 </section>
         </section>
-        <h2 class="project_header">Projects</h2>
+        <h2 id="project_id" class="project_header">Projects</h2>
         <section class="project_section">
                 <article class="project_article">
                     <a href="https://github.com/2021-October-Java-PT/virtual-pet-DougH6">Virtual Pet</a></h3>
                         <figure class="project_figure">
                             <img src="assets\virtual-pet.jpg" alt="" class="project_image">
-                            <p>Java, Javascript</p>
+                            <p>Java, Instance Variables, Methods, Objects, Loops</p>
                         </figure>
                 </article>
                 <article class="project_article">
                     <a href="https://github.com/2022-October-Java-PT-Classroom/virtual-pet-shelter-DougH6">Virtual Pet Shelter</a>
                         <figure class="project_figure">
                             <img src="assets\virtual-pet-shelter.jpg" alt="" class="project_image">
-                            <p>Java, Javascript</p>
+                            <p>Java, Test Driven Development, Collections </p>
                         </figure>
                 </article>
                 <article class="project_article">
                     <a class="project_title" href="https://github.com/2022-October-Java-PT-Classroom/virtual-pet-amok-DougH6">Virtual Pets Amok</a>
                         <figure class="project_figure">
                             <img src="assets\virtual-pet-amok.jpg" alt="" class="project_image">
-                            <p>Java, Javascript</p>
+                            <p>Java, Abstraction, Polymorphism, Inheritance, Encapsulation </p>
                         </figure>
                 </article>
         </section>
