--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/cd3c87f9da.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -40,8 +39,8 @@
                     </section>
                     <section class="section_links">
                         <h3>Links</h3>
-                        <a href="https://www.linkedin.com/in/douglas-p-holt/" class="fa fa-linkedin"></a>
-                        <a href="https://github.com/DougH6" class="fa fa-github"></a>
+                        <a href="https://www.linkedin.com/in/douglas-p-holt/">Linkedin</a>
+                        <a href="https://github.com/DougH6">Github</a>
                     </section>
                 </section>
         </section>
